--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-native-safe-area-view": "^1.0.0",
     "react-native-screens": "^2.5.0",
     "react-navigation": "^4.3.7",
-    "react-navigation-stack": "^2.3.11"
+    "react-navigation-stack": "^2.3.11",
+    "react-navigation-tabs": "^2.8.11"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
