--- a/package.json
+++ b/package.json
@@ -10,17 +10,22 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@material-ui/core": "^4.9.10",
     "@react-native-community/masked-view": "^0.1.9",
+    "formik": "^2.1.4",
     "react": "16.11.0",
     "react-native": "0.62.2",
+    "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-safe-area-view": "^1.0.0",
     "react-native-screens": "^2.5.0",
+    "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.3.7",
     "react-navigation-stack": "^2.3.11",
-    "react-navigation-tabs": "^2.8.11"
+    "react-navigation-tabs": "^2.8.11",
+    "yup": "^0.28.3"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
