--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "formik": "^2.1.4",
     "react": "16.11.0",
     "react-native": "0.62.2",
+    "react-native-action-button": "^2.8.5",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-material-dropdown": "^0.11.1",
