--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@material-ui/core": "^4.9.10",
     "@react-native-community/masked-view": "^0.1.9",
     "@react-native-community/picker": "^1.3.0",
+    "axios": "^0.19.2",
     "formik": "^2.1.4",
     "react": "16.11.0",
     "react-native": "0.62.2",
@@ -27,8 +28,12 @@
     "react-native-screens": "^2.5.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.3.7",
+    "react-navigation-drawer": "^2.4.11",
     "react-navigation-stack": "^2.3.11",
     "react-navigation-tabs": "^2.8.11",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "yup": "^0.28.3"
   },
   "devDependencies": {
