--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-community/picker": "^1.3.0",
     "axios": "^0.19.2",
     "formik": "^2.1.4",
+    "immutability-helper": "^3.0.2",
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-action-button": "^2.8.5",
@@ -27,6 +28,7 @@
     "react-native-safe-area-context": "^0.7.3",
     "react-native-safe-area-view": "^1.0.0",
     "react-native-screens": "^2.5.0",
+    "react-native-touchable-scale": "^2.1.1",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.3.7",
     "react-navigation-drawer": "^2.4.11",
