--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.9.10",
+    "@react-native-community/datetimepicker": "^2.3.2",
     "@react-native-community/masked-view": "^0.1.9",
     "@react-native-community/picker": "^1.3.0",
     "axios": "^0.19.2",
