--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -22,6 +22,13 @@
         </intent-filter>
       </activity>
       <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
+
+         <meta-data
+          android:name="com.google.android.geo.API_KEY"
+          android:value="AIzaSyBitMCtjE2CmW8ph9OmkKclUWu5PGNECUo"/>
+  
+   <!-- You will also only need to add this uses-libray tag -->
+          <uses-library android:name="org.apache.http.legacy" android:required="false"/>
     </application>
 
 </manifest>
