--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@react-native-community/masked-view": "^0.1.9",
     "@react-native-community/netinfo": "^5.8.0",
     "@react-native-community/picker": "^1.3.0",
+    "@unimodules/core": "^5.1.0",
     "axios": "^0.19.2",
+    "expo-permissions": "^8.1.0",
     "formik": "^2.1.4",
     "immutability-helper": "^3.0.2",
     "react": "16.11.0",
@@ -32,6 +34,7 @@
     "react-native-safe-area-view": "^1.0.0",
     "react-native-screens": "^2.5.0",
     "react-native-touchable-scale": "^2.1.1",
+    "react-native-unimodules": "^0.9.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.3.7",
     "react-navigation-drawer": "^2.4.11",
